cmake_minimum_required(VERSION 3.20)
project(3_ C)

set(CMAKE_C_STANDARD 11)

add_executable(3_
#        Func_no_args_no_return.c
#        Func_no_args_yes_return.c
#        Func_1_arg_yes_return.c
#        Func_yes_args_yes_return.c
#        One_local_var.c
#        Many_local_var.c
#        Local_arr.c
#        Dynamic_arr.c
#        Struct_simple.c
#        Struct_calling.c
        Recursion.c
        )
